--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.7",
+    "axios": "^0.19.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.6.0",
@@ -18,6 +19,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.2",
     "react-navigation-stack": "^2.2.3",
     "react-redux": "^7.2.0",
@@ -26,6 +28,8 @@
     "reactotron-redux-saga": "^4.2.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "reduxsauce": "^1.1.2",
+    "seamless-immutable": "^7.1.4",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
